1.1.3: BETA

1.1.2: 2017/05/10
     - moved source code from sourceforge to github
     - added folder upload support via folder drag and drop and menu dialog
     - changed file/folder action dialog
     - improved Highlighter extension
     - changed $HEADER and $LANGSWITCH defaults
     - added $ALLOW_PATHINPUT option (default: 0)
     - removed $MAXNAVPATHSIZE, added $MAXQUICKNAVELEMENTS, and changed default for $MAXFILENAMESIZE from 50 to 10
     - added MotD extension
     - changed toolbar layout 
     - refactored toolbar, status bar, side bar for easier changes and extension integration
     - added session authentication support
     - added Brotli compression support (module IO::Compress::Brotli required)
     - added Localizer plugin for Web UI translation support
     - improved accessiblity: improved screenreader and keyboard support
     - converted all web interface icons to SVG
     - added folder tree view, big icon and small icon view

1.1.1: 2016/9/10 
     - fixed broken images in ImageInfo extension bug
     - fixed wrong thumbnail toggle state bug in QuickToggle extension
     - fixed highlighting on not selectable folders is not possible bug
     - fixed search dialog with wrong input types and formatting problem bugs
     - fixed missing date range search and broken thumbnail bugs
     - fixed unable to disable AFS ACL changes bug (thx Stephen Joyce)
     - fixed missing hyphen in AFS group and user names support bug (thx Stephen Joyce) 
     - fixed WebDAV quota bug
     - fixed tabbing does not work with bookmarks, auto refresh, file list table header bug
     - fixed WebDAV properties are not moved correctly bug (mod_perl only)
     - fixed WebDAV SEARCH method handling bugs
     - fixed wrong content length in conjunction with wide UTF-8 characters bug     
     - added missing redirect after direct redirected folder call
     - added profile tab to GPXViewer extension
     - added cookies hook for web interface extensions